--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,12 @@
         "symfony/yaml": "*"
     },
     "require-dev": {
+        "behat/behat": "dev-master",
+        "behat/mink": "dev-master",
+        "behat/mink-browserkit-driver": "^1.3",
+        "behat/mink-extension": "^2.3.1@dev",
+        "behat/symfony2-extension": "^2.1",
+        "behatch/contexts": "^3.2",
         "symfony/browser-kit": "*",
         "symfony/debug-pack": "*",
         "symfony/dotenv": "*",
@@ -39,7 +45,8 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "bin-dir": "bin/"
     },
     "autoload": {
         "psr-4": {
@@ -79,5 +86,6 @@
             "allow-contrib": false,
             "require": "4.1.*"
         }
-    }
+    },
+    "minimum-stability": "stable"
 }
