--- a/composer.json
+++ b/composer.json
@@ -30,9 +30,9 @@
         "behat/behat": "dev-master",
         "behat/mink": "dev-master",
         "behat/mink-browserkit-driver": "^1.3",
-        "behat/mink-extension": "^2.3.1@dev",
-        "behat/symfony2-extension": "^2.1",
+        "behat/mink-extension": "^2.3.1",
         "behatch/contexts": "^3.2",
+        "friends-of-behat/symfony-extension": "^1.2",
         "symfony/browser-kit": "*",
         "symfony/debug-pack": "*",
         "symfony/dotenv": "*",
